--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,5 +1,4 @@
-<h1>AskMe</h1>
-<p>Welcome, <%= params[:username] %></p>
+<h1><%= @name %>, AskMe</h1>
 
 <footer>
   &copy; shilov <%= Time.now.year %>
