message for user and styles

--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,4 +1,4 @@
-<h1><%= @question.title %></h1>
+<h1 class="mb-4"><%= @question.title %></h1>
 
 <p>
   <time datetime="<%= @question.formatted_created_at %>">
