--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,6 +1,6 @@
 <h1 class="mb-4">Questions</h1>
 
-<%= link_to 'New question', new_question_path, class: 'btn btn-primary btn-lg' %>
+<%= link_to 'New question', new_question_path, class: 'btn btn-outline-success' %>
 
 <% @questions.each do |question| %>
   <article class="card mt-3">
@@ -17,10 +17,14 @@
           </p>
         </section>
 
-        <%= link_to 'Show', question_path(question), class: 'btn btn-primary' %>
-        <%= link_to 'Edit', edit_question_path(question), class: 'btn btn-secondary' %>
-        <%= link_to 'Destroy', question_path(question), class: 'btn btn-danger',
-                    data: {method: :delete, confirm: 'Are you sure?'} %>
+      <table>
+        <tr>
+          <td><%= link_to 'Show', question_path(question), class: 'btn btn-outline-primary' %></td>
+          <td><%= link_to 'Edit', edit_question_path(question), class: 'btn btn-outline-secondary' %></td>
+          <td><%= button_to 'Destroy', question_path(question), class: 'btn btn-outline-danger',
+                            method: :delete, data: { confirm: 'Are you sure?'} %></td>
+        </tr>
+      </table>
     </div>
   </article>
 <% end %>
